--- a/css/index.css
+++ b/css/index.css
@@ -43,3 +43,10 @@ a{
     border: solid black 1px;
 
 }
+.arriba{
+    font-family: 'Montserrat', sans-serif;
+    height: 40px;
+   
+    border: solid black 1px;
+
+}
