--- a/css/generos.css
+++ b/css/generos.css
@@ -11,3 +11,10 @@ a{
     text-decoration: none;
     color: black;
 }
+.arriba{
+    font-family: 'Montserrat', sans-serif;
+    height: 40px;
+   
+    border: solid black 1px;
+
+}
