--- a/css/generos.css
+++ b/css/generos.css
@@ -1,19 +1,24 @@
 header{
     display: grid;
-    background-color: aqua;
+    background-color: rgba(255, 68, 0, 0.822);
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    border: solid black 1px;
+    border: white 5px;
     font-family: 'Montserrat', sans-serif;
     padding: 15px;
-    
+    border-radius: 10px;
+    border: solid #353535 1.5px;
 }
 a{
     text-decoration: none;
     color: black;
 }
+body{
+    background-color: black;
+}
 .arriba{
     font-family: 'Montserrat', sans-serif;
     height: 40px;
+    color: white;
    
     border: solid black 1px;
 
