--- a/css/playlist.css
+++ b/css/playlist.css
@@ -1,12 +1,17 @@
 header{
     display: grid;
-    background-color: aqua;
+    background-color: rgba(255, 68, 0, 0.822);
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    border: solid black 1px;
+    border: white 5px;
     font-family: 'Montserrat', sans-serif;
     padding: 15px;
+    border-radius: 10px;
+    border: solid #353535 1.5px;
     margin-bottom: 20px;
     
+}
+body{
+    background-color: black;
 }
 a{
     text-decoration: none;
@@ -18,12 +23,14 @@ a{
     margin-top: 20px;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr;
-    background-color: blanchedalmond;
+   background-color: rgba(255, 68, 0, 0.822);;
     text-align: center;
+    border-radius: 10px;
     width: 500px;
     justify-content: center;
     font-family: 'Montserrat', sans-serif;
     margin: auto;
+    
  
 }
 h1{
@@ -32,6 +39,7 @@ h1{
 .arriba{
     font-family: 'Montserrat', sans-serif;
     height: 40px;
+    color: white;
    
     border: solid black 1px;
 
