--- a/css/detail.css
+++ b/css/detail.css
@@ -17,3 +17,20 @@ a{
     text-align: center;
     color: black;
 }
+.footer{
+    background-color: rgba(255, 68, 0, 0.822);
+    border-radius: 10px;
+    border: solid #353535 1.5px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 10px;
+}
+.deezer{
+    text-align: right;
+    padding-right: 10px;
+}
+.arriba{
+    font-family: 'Montserrat', sans-serif;
+    height: 40px;
+    color: white;
+}
