--- a/css/playlist.css
+++ b/css/playlist.css
@@ -44,3 +44,15 @@ h1{
     border: solid black 1px;
 
 }
+.footer{
+    background-color: rgba(255, 68, 0, 0.822);
+    border-radius: 10px;
+    border: solid #353535 1.5px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 10px;
+}
+.deezer{
+    text-align: right;
+    padding-right: 10px;
+}
