--- a/css/index.css
+++ b/css/index.css
@@ -125,3 +125,18 @@ a{
     text-align: right;
     padding-right: 10px;
 }
+.trackblock{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    padding: 5px;
+}
+.albumblock{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    padding: 5px;
+}
+.artistblock{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    padding: 5px;
+}
