--- a/css/generos.css
+++ b/css/generos.css
@@ -35,3 +35,15 @@ body{
     text-align: right;
     padding-right: 10px;
 }
+.todo{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    gap: 30px;
+    margin-top: 30px;
+}
+.fila1{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 10px;
+    text-align: center;
+}
