--- a/css/detail.css
+++ b/css/detail.css
@@ -1,6 +1,6 @@
 header{
     display: grid;
-    background-color: rgba(255, 68, 0, 0.822);
+    background-color: rgba(255, 68, 0, 0.61);
     grid-template-columns: 1fr 1fr 1fr 1fr;
     border: white 5px;
     font-family: 'Montserrat', sans-serif;
@@ -10,7 +10,7 @@ header{
     
 }
 body{
-    background-color: black;
+    background-image: url(../img/fondo2.jpg);
 }
 a{
     text-decoration: none;
@@ -18,7 +18,7 @@ a{
     color: black;
 }
 .footer{
-    background-color: rgba(255, 68, 0, 0.822);
+    background-color: rgba(255, 68, 0, 0.61);
     border-radius: 10px;
     border: solid #353535 1.5px;
     display: grid;
@@ -47,10 +47,11 @@ a{
 }
 .texto{
     display: grid;
-    grid-template-rows: 0.5fr 1fr 1.5fr 0.5fr 1fr;
+    grid-template-rows: 0.5fr 1fr 1.5fr 0.5fr;
     color: white;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
 }
 .albumes{
     display: grid;
