--- a/css/index.css
+++ b/css/index.css
@@ -6,8 +6,13 @@ header{
     font-family: 'Montserrat', sans-serif;
     padding: 15px;
     border-radius: 10px;
-    border: solid #353535 1.5px;
-    
+    border: solid #353535 1.5px;    
+}
+.logo{
+    margin: auto;
+}
+.titulos{
+    margin: auto;
 }
 body{
     background-image: url(../img/fondo2.jpg);
@@ -120,7 +125,7 @@ a{
     height: 40px;
     color: white;
 }
-.footer{
+footer{
     background-color: rgba(255, 68, 0, 0.61);
     border-radius: 10px;
     border: solid #353535 1.5px;
@@ -131,6 +136,7 @@ a{
 .deezer{
     text-align: right;
     padding-right: 10px;
+    
 }
 .trackblock{
     display: grid;
@@ -150,4 +156,37 @@ a{
     grid-template-columns: 1fr 3fr;
     padding: 5px;
     border-bottom: solid black;
+}
+@media(max-width: 768px){
+    .carrusel{
+        display: none;
+    }
+    .AgusLerej{
+        font-size: 12px;
+        margin: auto;
+    }
+    p{
+        font-size: 12px;
+    }
+    .premio{
+        display: none;
+    }
+    img{
+        height: 40px;
+    }
+    .total{
+        display: grid;
+        grid-template-rows: 0.6fr 0.1fr 3.4fr 0.4fr;
+    }
+    .triple{
+        margin-top: 10px;
+    }
+    .arriba{
+        display: none;
+    }
+}
+@media(max-width: 320px){
+    .total{
+
+    }
 }
