--- a/css/detail.css
+++ b/css/detail.css
@@ -3,12 +3,19 @@ header{
     background-color: rgba(255, 68, 0, 0.61);
     grid-template-columns: 1fr 1fr 1fr 1fr;
     border: white 5px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Patrick Hand', cursive;
+    font-size: 30px;
     padding: 15px;
     border-radius: 10px;
-    border: solid #353535 1.5px;
-    
+    border: solid #353535 1.5px;    
 }
+.logo{
+    margin: auto;
+}
+.titulos{
+    margin: auto;
+}
+
 body{
     background-image: url(../img/fondo2.jpg);
 }
