--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,8 @@ header{
     background-color: rgba(255, 68, 0, 0.61);
     grid-template-columns: 1fr 1fr 1fr 1fr;
     border: white 5px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Patrick Hand', cursive;
+    font-size: 30px;
     padding: 15px;
     border-radius: 10px;
     border: solid #353535 1.5px;    
@@ -56,7 +57,6 @@ a{
 
     gap: 20px;
     height: 400px;
-    font-family: 'Montserrat', sans-serif;
     text-align: center;
 }
 .tracks{
@@ -66,11 +66,13 @@ a{
      text-align: center;
      
 }
-.tracksarriba{
+.semititulos{
     background-color: rgba(255, 68, 0, 0.61);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border: solid #353535 1.5px;
+    font-family: 'Patrick Hand', cursive;
+    font-size: 20px;
 }
 .abajo{
     background-color: rgba(255, 68, 0, 0.61);
@@ -87,13 +89,7 @@ a{
     gap: 8px;
     grid-template-rows: 1fr 10fr;
 }
-.arribaalbum{
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    background-color: rgba(255, 68, 0, 0.61);
-    border: solid #353535 1.5px;
 
-}
 .abajo2{
     background-color: rgba(255, 68, 0, 0.61);
     border-bottom-left-radius: 10px;
@@ -108,12 +104,6 @@ a{
     grid-template-rows: 1fr 10fr;
 }
 
-.ArtistArriba{
-    background-color: rgba(255, 68, 0, 0.61);
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border: solid #353535 1.5px;
-}
 .abajo3{
     background-color: rgba(255, 68, 0, 0.61);
     border-bottom-left-radius: 10px;
@@ -158,6 +148,9 @@ footer{
     border-bottom: solid black;
 }
 @media(max-width: 768px){
+    .titulos{
+        font-size: 25px;
+    }
     .carrusel{
         display: none;
     }
@@ -186,7 +179,9 @@ footer{
     }
 }
 @media(max-width: 320px){
-    .total{
-
+    header{
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        font-size: 10px;
     }
 }
