--- a/css/index.css
+++ b/css/index.css
@@ -78,7 +78,7 @@ a{
     background-color: rgba(255, 68, 0, 0.61);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    
+    font-family: 'Montserrat', sans-serif;
     border: solid #353535 1.5px;
 }
 
@@ -94,6 +94,7 @@ a{
     background-color: rgba(255, 68, 0, 0.61);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    font-family: 'Montserrat', sans-serif;
     border: solid #353535 1.5px;
 }
 .artist{
@@ -108,6 +109,7 @@ a{
     background-color: rgba(255, 68, 0, 0.61);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    font-family: 'Montserrat', sans-serif;
     border: solid #353535 1.5px;
 }
 .arriba{
