--- a/css/detail.css
+++ b/css/detail.css
@@ -1,3 +1,7 @@
+.total{
+    display: grid;
+    grid-template-rows: 0.1fr 1fr 6fr 0.1fr 1fr;
+}
 header{
     display: grid;
     background-color: rgba(255, 68, 0, 0.61);
@@ -8,6 +12,7 @@ header{
     padding: 15px;
     border-radius: 10px;
     border: solid #353535 1.5px;    
+    
 }
 .logo{
     margin: auto;
@@ -64,4 +69,43 @@ a{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     column-gap: 5px;
+}
+@media(max-width: 768px){
+    .titulos{
+        font-size: 25px;
+    }
+    .AgusLerej{
+        font-size: 12px;
+        margin: auto;
+    }
+    p{
+        font-size: 12px;
+    }
+    .conetido{
+        grid-template-columns: 1fr;
+    }
+    .fotospinetta{
+       display: none;
+    }
+    .texto{
+        background-image: url(../img/spinettadetail.jpg);
+    }
+    .arriba{
+        display:none
+    }
+    .total{
+        grid-template-rows: 0.2fr 5fr 0.2fr;
+    }
+}
+@media(max-width: 320px){
+    header{
+        display: grid;
+        grid-template-columns: none; 
+        align-items: center;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        font-size: 8px;
+    }
+    .total{
+        grid-template-rows: 1fr 4fr 0.2fr;
+    }
 }
