--- a/css/index.css
+++ b/css/index.css
@@ -171,7 +171,7 @@ footer{
     }
     .total{
         display: grid;
-        grid-template-rows: 0.6fr 0.1fr 3.4fr 0.4fr;
+        grid-template-rows: 0.2fr 0.1fr 4.9fr 0.2fr;
     }
     .triple{
         margin-top: 10px;
@@ -183,7 +183,15 @@ footer{
 @media(max-width: 320px){
     header{
         display: grid;
+        grid-template-columns: none; 
+        align-items: center;
         grid-template-rows: 1fr 1fr 1fr 1fr;
+        font-size: 8px;
+    }
+    .total{
+        grid-template-rows: 0.2fr 0.1fr 2fr 0.2fr;
+    }
+    .AgusLerej{
         font-size: 10px;
     }
 }
