--- a/css/generos.css
+++ b/css/generos.css
@@ -28,7 +28,7 @@ body{
     color: white;
 
 }
-.footer{
+footer{
     background-color: rgba(255, 68, 0, 0.61);
     border-radius: 10px;
     border: solid #353535 1.5px;
@@ -57,4 +57,42 @@ h1{
     text-align: center;
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+@media(max-width: 768px){
+    .AgusLerej{
+        font-size: 12px;
+        margin: auto;
+    }
+    .arriba{
+        display: none;
+    }
+  .fila{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        padding-left: 80px;
+        grid-template-rows: 1fr 1f 1fr 1fr;
+        margin-bottom: -20px;
+    }
+    footer{
+        margin-top: 45px;
+    }
+}
+@media(max-width:320px){
+    header{
+        display: grid;
+        grid-template-columns: none; 
+        align-items: center;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        font-size: 25px;
+    }
+    .fila{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+        margin-bottom: -350px;
+        margin-left: -50px;
+    }
+    .portadagenero{
+        height: 100px;
+    }
 }
