--- a/css/index.css
+++ b/css/index.css
@@ -37,16 +37,20 @@ a{
 }
 .buscador{
     border-radius: 10px;
-    border: solid #353535 1.5px;
-    background-color: rgba(182, 178, 178, 0.89);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    
     margin-top: 10px;
+}
+.buscar{
+    
 }
 .carrusel{
     background-color: grey;
     height: 300px;
     border-radius: 10px;
     border: solid #353535 1.5px;
-    margin-top: 10px;
+    margin-top: 30px;
     text-align: center;
 }
 .triple{
@@ -143,6 +147,7 @@ footer{
     padding: 5px;
     border-bottom: solid black;
 }
+
 .artistblock{
     display: grid;
     grid-template-columns: 1fr 3fr;
@@ -190,6 +195,7 @@ footer{
     }
     .triple{
         gap: 1px;
+        margin-top: 20px;
     }
     .total{
         grid-template-rows: 0.2fr 0.1fr 2fr 0.2fr;
