--- a/css/detail.css
+++ b/css/detail.css
@@ -29,7 +29,7 @@ a{
     text-align: center;
     color: black;
 }
-.footer{
+footer{
     background-color: rgba(255, 68, 0, 0.61);
     border-radius: 10px;
     border: solid #353535 1.5px;
