--- a/css/generos.css
+++ b/css/generos.css
@@ -1,6 +1,6 @@
 .total{
     display: grid;
-    grid-template-rows: 0.7fr 0.2fr 1.3fr 0.2fr;
+    grid-template-rows: 0.8fr 0.4fr 1.8fr 0.2fr;
 }
 header{
     display: grid;
@@ -16,6 +16,7 @@ header{
 }
 .logo{
     margin: auto;
+    height: 100px;
 }
 .titulos{
     margin: auto;
@@ -28,16 +29,33 @@ a{
 body{
     background-image: url(../img/fondo2.jpg);
 }
-
 footer{
     background-color: rgba(255, 68, 0, 0.61);
     border-radius: 10px;
     border: solid #353535 1.5px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
     margin-top: 10px;
 }
+.AgusLerej{
+    margin: auto;
+}
+.facebook{
+    height: 20px;
+    margin: auto;
+    padding: 10px;
+}
+.twitter{
+    height: 20px;
+    margin: auto;
+    padding: 10px;
+}
 .deezer{
+    height: 30x;
+    margin: auto;
+    padding: 5px;
+}
+.redesSociales{
     text-align: right;
     padding-right: 10px;
 }
@@ -70,7 +88,13 @@ h1{
     }
     .total{
         display: grid;
-        grid-template-rows: 0.2fr 0.1fr 1fr 0.2fr;
+        grid-template-rows: 0.4fr 0.5fr 4fr 0.2fr;
+    }
+    .logo{
+        height: 75px;
+    }
+    h1{
+        margin-top: 10px;
     }
     .fila{
         display: grid;
@@ -84,6 +108,21 @@ h1{
         font-size: 12px;
         margin: auto;
     }
+    .facebook{
+        height: 10px;
+        margin: auto;
+        padding: 5px;
+    }
+    .twitter{
+        height: 10px;
+        margin: auto;
+        padding: 5px;
+    }
+    .deezer{
+        height: 15px;
+        margin: auto;
+        padding: 5px;
+    }
 }
 @media(max-width:320px){
     .total{
@@ -95,9 +134,25 @@ h1{
         align-items: center;
         grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr;
         font-size: 8px;
-        height: 200px;
+        height: 150px;
+    }
+    .logo{
+        height: 50px;
+        margin: auto;
     }
     .AgusLerej{
         font-size: 10px;
+    }
+    .facebook{
+        height: 10px;
+        margin: auto;
+    }
+    .twitter{
+        height: 10px;
+        margin: auto;
+    }
+    .deezer{
+        height: 15px;
+        margin: auto;
     }
 }
