--- a/css/generos.css
+++ b/css/generos.css
@@ -4,15 +4,16 @@
 }
 header{
     display: grid;
-    background-color: rgba(255, 68, 0, 0.61);
+    background-color: rgba(139, 39, 3, 0.918);
     grid-template-columns: 1fr 1fr 1fr 1fr;
     border: white 5px;
     font-family: 'Patrick Hand', cursive;
     font-size: 30px;
     padding: 15px;
-    border-radius: 10px;
     border: solid #353535 1.5px;
-    height: 100px; 
+    height: 100px;
+    position: sticky;
+    top: 0;
 }
 .logo{
     margin: auto;
@@ -83,6 +84,9 @@ h1{
     margin-top: 10px;
 }
 @media(max-width: 768px){
+    header{
+        position: static;
+    }
     .titulos{
         font-size: 25px;
     }
