--- a/css/playlist.css
+++ b/css/playlist.css
@@ -4,15 +4,16 @@
 }
 header{
     display: grid;
-    background-color: rgba(255, 68, 0, 0.61);
+    background-color: rgba(139, 39, 3, 0.918);
     grid-template-columns: 1fr 1fr 1fr 1fr;
     border: white 5px;
     font-family: 'Patrick Hand', cursive;
     font-size: 30px;
     padding: 15px;
-    border-radius: 10px;
     border: solid #353535 1.5px;
-    height: 100px; 
+    height: 100px;
+    position: sticky;
+    top: 0;
 }
 .logo{
     margin: auto;
@@ -44,8 +45,10 @@ a{
     justify-content: center;
     font-family: 'Montserrat', sans-serif; 
 }
-h1{
+h2{
     font-size: 25px;
+    border: solid black 4px;
+    border-radius: 10px;
 }
 footer{
     background-color: rgba(255, 68, 0, 0.61);
@@ -84,6 +87,7 @@ footer{
     }
     header{
         height: 100px;
+        position: static;
     }
     .logo{
         height: 75px;
@@ -133,10 +137,11 @@ footer{
         height: 50px;
         margin: auto;
     }
-    .container{
-        display: grid;
-        grid-template-rows: 1fr 1fr 1fr;
-        grid-template-columns: 1fr;
+    h2{
+        font-size: 18px;
+    }
+    h3{
+        font-size: 15px;
     }
     .AgusLerej{
         font-size: 10px;
