--- a/css/detailalbum.css
+++ b/css/detailalbum.css
@@ -31,6 +31,14 @@ a{
     text-align: center;
     color: black;
 }
+.sonar{
+    background-color: rgba(0, 0, 0, 0.664);
+    position: absolute;
+    position: sticky;
+    bottom: 0;
+    height: 80px;
+    margin: auto;
+}
 section{
     display: grid;
     grid-template-columns: 1fr 1.5fr;
@@ -125,12 +133,25 @@ footer{
     .titulos{
         font-size: 25px;
     }
+    h1{
+        font-size: 30px;
+    }
+    h2{
+        font-size: 25px;
+    }
+    .lanzamiento{
+        font-size: 18px;
+    }
+    li{
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr;
+    }
     .nombre{
         font-size: 20px;
     }
     audio{
         height: 20px;
-        width: 200px;
+        width: 150px;
     }
     .AgusLerej{
         font-size: 12px;
@@ -150,5 +171,40 @@ footer{
         height: 15px;
         margin: auto;
         padding: 5px;
+    }
+    .sonar{
+        display: none;
+    }
+}
+@media(max-width: 320px){
+    header{
+        display: grid;
+        grid-template-columns: none; 
+        align-items: center;
+        grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr;
+        font-size: 8px;
+        height: 150px;
+    }
+    .logo{
+        height: 50px;
+        margin: auto;
+    }
+    .total{
+        grid-template-rows: 0.2fr 3fr 0.2fr;
+    }
+    .AgusLerej{
+        font-size: 10px;
+    }
+    .facebook{
+        height: 10px;
+        margin: auto;
+    }
+    .twitter{
+        height: 10px;
+        margin: auto;
+    }
+    .deezer{
+        height: 15px;
+        margin: auto;
     }
 }
