--- a/css/detailalbum.css
+++ b/css/detailalbum.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 .total{
     display: grid;
     grid-template-rows: 2fr 12fr 0.2fr;
@@ -38,6 +41,76 @@ a{
     bottom: 0;
     height: 80px;
     margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+.infoTema{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    gap: 5px;
+}
+.nombreTema{
+    color: white;
+    font-size: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+}
+.nombreArista{
+    color: white;
+    font-size: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+}
+.reproduccion{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+.botones{
+    height: 50px;
+    margin-top: 10px;
+    gap: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+#play{
+    height: 50px;
+    cursor: pointer;
+}
+#pre{
+    height: 35px;
+    cursor: pointer;
+}
+#next{
+    height: 35px;
+    cursor: pointer;
+}
+.seekbar{
+    width: 300px;
+    height: 5px;
+    background-color: gray;
+    cursor: pointer;
+    border-radius: 5px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
+}
+#fill{
+    height: 5px;
+    background-color: rgb(156, 25, 25);
+    border-radius: 10px;
+}
+#handle{
+    height: 7px;
+    width: 7px;
+    background-color: rgb(209, 107, 107);
+    border-radius: 10px;
+    transform: scale(2);
 }
 section{
     display: grid;
@@ -83,7 +156,10 @@ li{
     text-align: center;
     font-size: 25px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 2fr;
+}
+.boton-play{
+    height: 60px;
 }
 audio{
     margin: auto;
