--- a/css/generos.css
+++ b/css/generos.css
@@ -15,6 +15,12 @@ header{
     position: sticky;
     top: 0;
 }
+h2{
+    color: white;
+    font-family: 'Patrick Hand' , cursive;
+    text-align: center;
+    font-size: 30px;
+}
 .logo{
     margin: auto;
     height: 100px;
@@ -63,18 +69,18 @@ footer{
 .generos{
     display: grid;
     grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     margin-top: 10px;
+
+    
 }
-.fila{
-    margin: auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    gap: 10px;
+.cajas{
+    
     text-align: center;
 }
+
 .portadagenero{
-    border-radius: 10px;
-    margin: 20px;
+    border-radius: 20px;
 }
 h1{
     font-size: 40px;
@@ -139,6 +145,10 @@ h1{
         grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr;
         font-size: 8px;
         height: 150px;
+    }
+    .generos{
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     }
     .logo{
         height: 50px;
